fix contrast

--- a/lesson8/css/small.css
+++ b/lesson8/css/small.css
@@ -267,11 +267,11 @@ form label.top,
 form div {
   display: block;
   padding-top: 1rem;
-  color: #7f675b;
+  color: #6b564c;
   font-size: 0.9rem;
 }
 input::placeholder {
-  color: #7f675b;
+  color: #6b564c;
 }
 form label.top input,
 form label.top select,
@@ -279,10 +279,10 @@ textarea {
   -webkit-appearance: none;
   display: block;
   font-size: 1rem;
-  border: solid 1px #7f675b;
+  border: solid 1px #6b564c;
   border-radius: 4px;
   padding: 0.75rem;
-  color: #7f675b;
+  color: #6b564c;
   width: 90%;
   max-width: 20rem;
   background-color: #f5f5f5;
@@ -295,7 +295,7 @@ form label.top select {
 form label.sbs {
   display: block;
   padding: 0.85rem 0;
-  color: #7f675b;
+  color: #6b564c;
 }
 form label.radio {
   padding: 0.4rem 0;
@@ -324,14 +324,14 @@ input[type="range"]::-webkit-slider-runnable-track {
   width: 100%;
   height: 6px;
   cursor: pointer;
-  background: #7f675b;
+  background: #6b564c;
   border-radius: 5px;
 }
 input[type="range"]::-webkit-slider-thumb {
   height: 23px;
   width: 10px;
   border-radius: 5px;
-  background: #7f675b;
+  background: #6b564c;
   cursor: pointer;
   -webkit-appearance: none;
   margin-top: -10px;
